# egui-thematic

./: Cargo.toml  LICENSE  README.md  egui-thematic-demo-676caee1b0376b4f.js  egui-thematic-demo-ca6fa10d30149ef4.js  index.html  justfile
.github/workflows/: pages.yml
demo/: Cargo.toml  index.html
demo/src/: app.rs  main.rs
src/: config.rs  lib.rs  state.rs  ui.rs
