[package]
name = "egui-thematic"
version = "0.1.1"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
A theme editor and configuration system for egui applications with live preview,
preset management, random theme generation, and persistence.
"""
homepage = "https://github.com/matthewjberger/egui-thematic"
repository = "https://github.com/matthewjberger/egui-thematic"
keywords = ["egui", "theme", "ui", "nightshade", "editor"]
categories = ["gui", "visualization"]
license = "MIT"
edition = "2021"
rust-version = "1.90.0"
readme = "README.md"

[workspace]
members = ["demo"]

[dependencies]
egui = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.3"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
