[package]
name = "egui-thematic-demo"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.31.1"
egui-thematic = { path = ".." }
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts",
    "glow",
] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
